# ledge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fde-unified-playbook.html  pyproject.toml
app/: __init__.py  main.py
app/api/: schemas.py
app/domain/: enums.py  errors.py  models.py
app/services/: event_bus.py  instruction_service.py  ledger_service.py  reconciliation_service.py  risk_service.py  workflow_service.py
app/static/: index.html
app/storage/: repository.py  sqlite_repo.py
tests/: conftest.py  test_authorization.py  test_expiry_release.py  test_idempotency.py  test_observability.py  test_reconciliation.py  test_risk_assessment.py  test_settlement.py
